Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-138478

TapHandler doesn't react to touch input inside popup background

XMLWordPrintable

    • 14a79d7af (dev), f081752d1 (6.10), d7f4a7f49 (6.9), ce5afcf7a (tqtc/lts-6.8), c0d37c6a8 (tqtc/lts-6.5)

      Consider the following code

      import QtQuick 2.12
      import QtQuick.Controls 2.5
      
      Item {
          Popup {
              visible: true
              width: 500
              height: 500
              background: Rectangle {
                  color: "red"
                  TapHandler {
                      onTapped: console.warn("tapped")
                  }
              }
          }
      } 

      When clicking the red area with the mouse "tapped" is printed as expected. However when tapping it using a touchscreen it doesn't react.

      When moving the rectangle from background to a regular child touch works as expected.

      Touch works as expected in Qt 5.15

        1. QTBUG-138478.zip
          2 kB
          Joni Poikelin
        For Gerrit Dashboard: QTBUG-138478
        # Subject Branch Project Status CR V

            santhoshkumar Santhosh Kumar Selvaraj
            nicolasfella Nicolas Fella
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: